# options_backtesting_framework

./: .gitignore  LICENSE  MANIFEST.in  Pipfile  README.md  pyproject.toml  settings.toml  setup.py
.github/: CODEOWNERS
config/: settings.toml
options_framework/: config.py  option.py  option_chain.py  option_types.py
options_framework/data/: data_loader.py  file_data_loader.py  sql_data_loader.py
options_framework/spreads/: butterfly.py  calendar.py  collar.py  condor.py  iron_butterfly.py  iron_condor.py  option_combo.py  ratio.py  single.py  strangle.py
options_framework/utils/: helpers.py
temp_data/: SPXW-sxdrzr4_.pkl
test_options/: 0DTE_2023.py  14DaySPX.py  358_ITM_SPY_Calls.py  358_OTM_SPY_Calls.py  7_DTE_SPX.py  SPX_0DTE_IronCondor.py  SPX_60_ORB.py  buy_HMA_direction_daily.py  first_test.py  msft_hma_call_option.py  otm_butterfly_test_1.py  sg_signals.py  trading_new_highs_covered_calls.py  trading_new_highs_put_credit_spread.py
tests/: conftest.py  mock_portfolio.py  mocks.py  opt_test_helper.py  options_test_helper.py  sample.py  test_butterfly.py  test_config.py  test_data_loader.py  test_file_data_loader.py  test_helpers.py  test_iron_condor.py  test_mocks.py  test_option.py  test_option_chain.py  test_option_chain_factory_methods.py  test_option_combo.py  test_options_manager.py  test_parquet_data_loader.py  test_portfolio.py  test_single.py  test_single_option.py  test_spread_base.py  test_sql_server_data_loader.py  test_straddle.py  test_test.py  test_test_manager.py  test_vertical.py  test_vertical_spread.py
tests/config/: settings.toml  (+7 more)
(+182 files in other folders)
